hphp/hack/test/decl/generic_alias_with_namespace.php.typecheck.exp
File "generic_alias_with_namespace.php", line 3, characters 15-19:
Unbound name: `Bar\X` (Naming[2049])
