hphp/hack/test/decl/generic_alias_with_namespace.php
<?hh // strict

type Foo<T> = Bar\X<T>;
